--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-quickbooks",
+  "name": "nodebooks",
   "version": "2.0.25",
   "description": "node.js client for Intuit's IPP QuickBooks V3 API.",
   "main": "index.js",
